--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           DEFAULT_BUMP: patch
+        if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip') }}
