--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@huggingface/hub": "^0.18.1",
+    "@huggingface/inference": "^2.8.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.0",
@@ -7,11 +9,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.2",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
+    "transformers": "^3.1.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
