--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,8 @@
     "test:watch": "jest --watch",
     "dev": "nodemon --exec ts-node src/server.ts",
     "start": "ts-node src/server.ts",
+    "seedLocationOrganizer": "ts-node src/utils/locationOrganizerSeeding.ts",
+    "seedEvent": "ts-node src/utils/eventSeeding.ts",
     "build": "tsc"
   }
 }
