--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemailer-sendgrid": "^1.0.3",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "transformers": "^3.1.0",
@@ -29,7 +30,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.4",
-    "@types/nodemailer": "^6.4.15",
+    "@types/nodemailer": "^6.4.16",
     "@types/nodemailer-sendgrid": "^1.0.3",
     "@types/passport": "^1.0.16",
     "@types/sinon": "^17.0.3",
