--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,8 @@
 {
   "dependencies": {
-
     "@google/generative-ai": "^0.21.0",
-    "@langchain/community": "^0.3.4",
-    "@langchain/core": "^0.3.9",
+    "@langchain/community": "^0.3.5",
+    "@langchain/core": "^0.3.11",
     "@langchain/google-genai": "^0.1.0",
     "@langchain/groq": "^0.1.2",
     "@langchain/langgraph": "^0.2.14",
@@ -15,6 +14,7 @@
     "cloudinary": "^2.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "duck-duck-scrape": "^2.2.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.2",
@@ -26,7 +26,8 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
