--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "duck-duck-scrape": "^2.2.5",
     "express": "^4.21.0",
+    "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.2",
     "mongodb": "^6.9.0",
