--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "formik": "^2.4.6",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
@@ -28,7 +29,8 @@
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.0-canary.20241016T212913"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
