--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
