--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,12 @@
     "@langchain/langgraph-checkpoint-mongodb": "^0.0.3",
     "@langchain/mongodb": "^0.1.0",
     "@sendgrid/mail": "^8.1.3",
+    "@types/date-fns": "^2.6.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "duck-duck-scrape": "^2.2.5",
     "express": "^4.21.0",
