--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,8 @@
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.0-canary.20241016T212913"
+    "zod": "^3.23.8",
+    "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
