--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
