--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,7 @@
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
