--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,31 +1,29 @@
-version: '3'
 services:
-  todo-frontend:
+  myevents-client:
     build:
-      context: ./todo-frontend  # Frontend code directory
+      context: ./client
       dockerfile: dev.Dockerfile
     volumes:
-      - ./todo-frontend:/usr/src/app
-    ports:
-      - "5173:5173"
-    container_name: todo-frontend-dev
-
-  todo-backend:
-    build:
-      context: ./todo-backend  # Backend code directory
-      dockerfile: dev.Dockerfile
-    volumes:
-      - ./todo-backend:/usr/src/app
+      - ./client:/usr/src/app
       - /usr/src/app/node_modules
     ports:
-      - "3000:3000"
-    container_name: todo-backend-dev
+      - "5173:5173"
+    container_name: myevents-client-dev
+
+  myevents-server:
+    build:
+      context: ./server
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./server:/usr/src/app
+      - /usr/src/app/node_modules
+    ports:
+      - "3003:3003"
+    container_name: myevents-server-dev
     environment:
-      - MONGO_URL=mongodb://root:example@mongo:27017/the_database?authSource=admin
-      - REDIS_URL=redis://redis:6379
+      - MONGO_DB_URL=${MONGO_DB_URL}
     depends_on:
       - mongo
-      - redis
 
   mongo:
     image: mongo
@@ -47,5 +45,5 @@ services:
       - "8080:80"
     container_name: reverse-proxy
     depends_on:
-      - client
-      - server
+      - myevents-client
+      - myevents-server
