--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "uuidv4": "^6.2.13",
     "zod": "^3.23.8",
     "zod-formik-adapter": "^1.3.0"
   },
